# AIBlue

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE.md  PROJECTREADME.md  README.md  SConstruct  TESTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: builds.yml
Architecture/Assets/: .$HTN_Model.drawio.bkp  architecture.afdesign~lock~
Architecture/Documents/: AI_Blue_WhitePaper.afpub  icon.afdesign
Assets/: .$Architecture.drawio.bkp  Architecture.drawio  HTN_Model.drawio  architecture.afdesign  architecture.afdesign~lock~
Documents/: ai_blue_banner.afdesign
demo/: Test.tscn  ai_blue_icon.png.import  hello_world_gdextention_function.gd  hello_world_gdextention_function.gd.uid  project.godot
demo/assets/images/: ai_blue_icon.png.import  pexels-mo-eid-8347501.jpg.import
demo/assets/materials/: light_blue.tres
demo/assets/models/: cone.blend.import  cone_range_1.tscn  triangle.blend.import  triangle.tscn
demo/controller/agent/: AgentController.gd  AgentController.gd.uid  AgentController.tscn  AgentController_FlowField.gd  AgentController_FlowField.gd.uid  AgentController_FlowField.tscn
demo/controller/player/: InputController.gd  InputController.gd.uid  PlayerController.gd.uid  PlayerController.tscn
demo/scenes/Level/: flow_field.tscn  flow_field.tscn2987646363.tmp  main.tscn
demo/scenes/Menu/: MainMenu.gd  MainMenu.gd.uid  MainMenu.tscn
demo/scripts/Levels/: LevelScript.gd.uid  LevelScript_Flow_Field.gd  LevelScript_Flow_Field.gd.uid
demo/scripts/Multiplayer/: MultiplayerManager.gd  MultiplayerManager.gd.uid
demo/scripts/Settings/: GlobalSettings.gd.uid
demo/scripts/Spawners/: Spawning.gd  Spawning.gd.uid
demo/scripts/SteeringBehaviors/: FlowField.gd  FlowField.gd.uid
demo/spawner/: AgentSpawner.gd.uid  AgentSpawner.tscn
extension/src/: ai_blue.cpp  ai_blue.h  ai_blue_agent.cpp  ai_blue_agent.h  register_types.cpp  register_types.h
game/: LevelScript.gd  mai47F1.tmp  main.gd  main.tscn  project.godot
game/assets/: cone.blend  cone.blend.import  triangle.blend.import  triangle.tscn
game/spawner/: AgentSpawner.gd  AgentSpawner.tscn
src/: ai_blue_agent.h  register_types.cpp
src/Agents/: README.md
src/Example/: Hello_World.cpp  Hello_World.h
src/Flow/: Flow_Field.cpp  Flow_Field.h
src/FluidHTN/: BaseDomainBuilder.h
test/cpp/: BUILD.bazel  FluidHTN
test/cpp/fluidhtn_tests/: ActionEffectsTest.cpp  BaseContextTests.cpp  DomainBuilderTests.cpp  DomainContextTester.h  DomainTests.cpp  FuncConditionTests.cpp  FuncOperatorTests.cpp  PlannerTests.cpp  PrimitiveTaskTests.cpp  RandomSelectorTests.cpp  SelectorTests.cpp  SequenceTests.cpp
test/cpp/pch/: precompiled.h
(+121 files in other folders)
